<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pocket Botanist</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_entry_screen">New Entry</string>
    <string name="menu_search">Search</string>
    <string name="menu_map">Map</string>
    <string name="menu_edit">Edit</string>
    <string name="nope">There are no entries</string>

    <string-array name="action_list">
        <item>Date (Descending)</item>
        <item>Date (Ascending)</item>
        <item>ID Number</item>
        <item>Species Name</item>
        <item>Genus Name</item>
    </string-array>

    <string name="title_activity_manual_location">Location</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_entrymap_1_3">Entry Map</string>
    <string name="title_location_2_3">Location Map</string>
    <string name="title_activity_mapfragmentpreview">Mapfragmentpreview</string>
    <string name="menu_delete">Delete Entry</string>
    <string name="entry_description">Delete Entry</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="main">Pocket Botanist</string>
    <string name="set_date">Select Date</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="BasicInfoButton">Basic Information</string>
    <string name="IDNum">ID Number</string>
    <string name="Species">Species</string>
    <string name="DAT">Date and Time</string>
    <string name="pic">Photos</string>
    <string name="flower">It\'s a pretty flower</string>
    <string name="loca">Location</string>
    <string name="cords">Coordinates as calculated by phone\'s GPS\:</string>
    <string name="note">Notes</string>
    <string name="fnote">Plant Notes</string>
    <string name="hnote">Habitat Notes</string>
    <string name="save">Save</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="common">Common Name</string>
    <string name="Default">Nothing</string>
    <string name="locacords">Location Coordinates</string>
    <string name="loncords">Longitude Coordinates</string>

</resources>