<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_search"
          android:title="@string/menu_search"
          android:icon="@drawable/search_small"
          android:actionViewClass="android.widget.SearchView" />
    <!--android:showAsAction="ifRoom|collapseActionView"-->
    
    <item
        android:id="@+id/menu_map"
        android:icon="@drawable/map_small"
        android:showAsAction="ifRoom"
        android:title="@string/menu_map"/>
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/entry_small"
        android:showAsAction="ifRoom"
        android:title="@string/menu_edit"/>
    <item
        android:id="@+id/menu_settings"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>