<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Basic Information" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cords"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lon"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/edit1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:hint="@string/loncords">
    </EditText>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lon"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/edit2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:hint="@string/locacords">
    </EditText>
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative1">
        <Button
            android:id="@+id/okButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:text="@string/save" />
        <Button
            android:id="@+id/cancelButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:layout_width="150dp" 
            android:text="@string/cancel" />
        
    </RelativeLayout>

</LinearLayout>